# AI-100x-SE-Join-Quest

./: .gitignore  EARSvsGherkin.md  thoughts.md
Join-Tasks/Task1/: BDD.prompt  OCP-Refactor.prompt  behave.ini  pretty.output  xLog.md
Join-Tasks/Task1/features/: double11.feature  order.feature
Join-Tasks/Task1/features/steps/: order_steps.py
Join-Tasks/Task1/src/: order_service.py  promotion.py
Join-Tasks/Task3/: BDD.prompt  OCP-Refactor.prompt  chessERD.md  pretty.output  pyproject.toml  test_report.json
Join-Tasks/Task3/.kiro/specs/chinese-chess-bdd/: design.md  requirements.md  tasks.md  xlogChess.md
Join-Tasks/Task3/features/: chess.feature
Join-Tasks/Task3/features/steps/: chess_steps.py
Join-Tasks/Task3/src/: __init__.py  chess.py
